{
  "version": 4,
  "terraform_version": "1.3.4",
  "serial": 5599,
  "lineage": "bcce0505-4f3a-b984-70b8-9e80adea4655",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instances",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0629230e074c580f2",
            "arn": "arn:aws:ec2:us-east-2:226490334962:instance/i-032eb0c441817503c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdh",
                "encrypted": false,
                "iops": 180,
                "throughput": 0,
                "volume_id": "vol-0c8cdfc83cb7ab85e",
                "volume_size": 60,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-032eb0c441817503c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "bd",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02b6fe79fb62d9f13",
            "private_dns": "ip-10-0-0-12.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.12",
            "public_ip": "3.144.82.20",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Author": "Jason.SC.Cheng",
                  "Name": "bd-wrk1-ebs",
                  "Team": "COD",
                  "terraform": "true"
                },
                "throughput": 0,
                "volume_id": "vol-0750b1dc3998b6072",
                "volume_size": 24,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07450abcaf3f112c9",
            "tags": {
              "Author": "Jason.SC.Cheng",
              "Name": "bd1",
              "Team": "COD",
              "terraform": "true"
            },
            "tags_all": {
              "Author": "Jason.SC.Cheng",
              "Name": "bd1",
              "Team": "COD",
              "terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09025c3a97182ea56"
            ]
          },
          "dependencies": [
            "aws_key_pair.aws_key",
            "aws_security_group.sg-all",
            "data.aws_ami_ids.ami",
            "data.aws_ami_ids.ami_centos",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "tls_private_key.key"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0629230e074c580f2",
            "arn": "arn:aws:ec2:us-east-2:226490334962:instance/i-031021654f39b91dc",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdh",
                "encrypted": false,
                "iops": 180,
                "throughput": 0,
                "volume_id": "vol-0256d1f1732f05496",
                "volume_size": 60,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-031021654f39b91dc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "bd",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0fc353d53408c370d",
            "private_dns": "ip-10-0-0-46.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.46",
            "public_ip": "18.191.192.148",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Author": "Jason.SC.Cheng",
                  "Name": "bd-wrk2-ebs",
                  "Team": "COD",
                  "terraform": "true"
                },
                "throughput": 0,
                "volume_id": "vol-0fc7b444ecbf34e85",
                "volume_size": 24,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07450abcaf3f112c9",
            "tags": {
              "Author": "Jason.SC.Cheng",
              "Name": "bd2",
              "Team": "COD",
              "terraform": "true"
            },
            "tags_all": {
              "Author": "Jason.SC.Cheng",
              "Name": "bd2",
              "Team": "COD",
              "terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09025c3a97182ea56"
            ]
          },
          "dependencies": [
            "aws_key_pair.aws_key",
            "aws_security_group.sg-all",
            "data.aws_ami_ids.ami",
            "data.aws_ami_ids.ami_centos",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "tls_private_key.key"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0629230e074c580f2",
            "arn": "arn:aws:ec2:us-east-2:226490334962:instance/i-00821dba2e706048e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdh",
                "encrypted": false,
                "iops": 180,
                "throughput": 0,
                "volume_id": "vol-029e8a9a5a27e3c9d",
                "volume_size": 60,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00821dba2e706048e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "bd",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0181c635250d41223",
            "private_dns": "ip-10-0-0-28.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.28",
            "public_ip": "3.15.188.128",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Author": "Jason.SC.Cheng",
                  "Name": "bd-wrk3-ebs",
                  "Team": "COD",
                  "terraform": "true"
                },
                "throughput": 0,
                "volume_id": "vol-0809c603832f64bd6",
                "volume_size": 24,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07450abcaf3f112c9",
            "tags": {
              "Author": "Jason.SC.Cheng",
              "Name": "bd3",
              "Team": "COD",
              "terraform": "true"
            },
            "tags_all": {
              "Author": "Jason.SC.Cheng",
              "Name": "bd3",
              "Team": "COD",
              "terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09025c3a97182ea56"
            ]
          },
          "dependencies": [
            "aws_key_pair.aws_key",
            "aws_security_group.sg-all",
            "data.aws_ami_ids.ami",
            "data.aws_ami_ids.ami_centos",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "tls_private_key.key"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0629230e074c580f2",
            "arn": "arn:aws:ec2:us-east-2:226490334962:instance/i-04acc256bd89d6542",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdh",
                "encrypted": false,
                "iops": 180,
                "throughput": 0,
                "volume_id": "vol-003ccbf00f189f2f2",
                "volume_size": 60,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04acc256bd89d6542",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "bd",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0177e2af6f4a16bb8",
            "private_dns": "ip-10-0-0-32.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.32",
            "public_ip": "3.133.111.47",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Author": "Jason.SC.Cheng",
                  "Name": "bd-wrk4-ebs",
                  "Team": "COD",
                  "terraform": "true"
                },
                "throughput": 0,
                "volume_id": "vol-019ec2df5e55b09fd",
                "volume_size": 24,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07450abcaf3f112c9",
            "tags": {
              "Author": "Jason.SC.Cheng",
              "Name": "bd4",
              "Team": "COD",
              "terraform": "true"
            },
            "tags_all": {
              "Author": "Jason.SC.Cheng",
              "Name": "bd4",
              "Team": "COD",
              "terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09025c3a97182ea56"
            ]
          },
          "dependencies": [
            "aws_key_pair.aws_key",
            "aws_security_group.sg-all",
            "data.aws_ami_ids.ami",
            "data.aws_ami_ids.ami_centos",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "tls_private_key.key"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0629230e074c580f2",
            "arn": "arn:aws:ec2:us-east-2:226490334962:instance/i-08c48ec0f434ac52f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdh",
                "encrypted": false,
                "iops": 180,
                "throughput": 0,
                "volume_id": "vol-07844d1e3c216b75c",
                "volume_size": 60,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08c48ec0f434ac52f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "bd",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d712264626451c94",
            "private_dns": "ip-10-0-0-5.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.5",
            "public_ip": "18.116.43.70",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Author": "Jason.SC.Cheng",
                  "Name": "bd-wrk5-ebs",
                  "Team": "COD",
                  "terraform": "true"
                },
                "throughput": 0,
                "volume_id": "vol-04850d42495888a12",
                "volume_size": 24,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07450abcaf3f112c9",
            "tags": {
              "Author": "Jason.SC.Cheng",
              "Name": "bd5",
              "Team": "COD",
              "terraform": "true"
            },
            "tags_all": {
              "Author": "Jason.SC.Cheng",
              "Name": "bd5",
              "Team": "COD",
              "terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09025c3a97182ea56"
            ]
          },
          "dependencies": [
            "aws_key_pair.aws_key",
            "aws_security_group.sg-all",
            "data.aws_ami_ids.ami",
            "data.aws_ami_ids.ami_centos",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "tls_private_key.key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:226490334962:security-group/sg-09025c3a97182ea56",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09025c3a97182ea56",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/26",
                  "10.0.0.64/26"
                ],
                "description": "internal",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "118.163.108.246/32",
                  "220.130.164.120/32",
                  "61.216.155.110/32",
                  "118.163.58.7/32",
                  "61.216.155.110/32",
                  "123.194.138.73/32",
                  "3.73.140.118/32",
                  "59.124.119.126/32",
                  "220.130.164.120/32",
                  "220.130.164.120/32"
                ],
                "description": "all public",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "bd-sg",
            "name_prefix": "",
            "owner_id": "226490334962",
            "revoke_rules_on_delete": false,
            "tags": {
              "Author": "Jason.SC.Cheng",
              "Name": "bd-sg",
              "Team": "COD",
              "terraform": "true"
            },
            "tags_all": {
              "Author": "Jason.SC.Cheng",
              "Name": "bd-sg",
              "Team": "COD",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-07afc6bd42ab6291b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:226490334962:internet-gateway/igw-026e1b4091e4e876b",
            "id": "igw-026e1b4091e4e876b",
            "owner_id": "226490334962",
            "tags": {
              "Name": "bd-vpc"
            },
            "tags_all": {
              "Name": "bd-vpc"
            },
            "vpc_id": "vpc-07afc6bd42ab6291b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-026e1b4091e4e876b",
            "id": "r-rtb-090fa44e715bad7681080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-090fa44e715bad768",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:226490334962:route-table/rtb-088bbc6baace98d66",
            "id": "rtb-088bbc6baace98d66",
            "owner_id": "226490334962",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "bd-vpc-private-us-east-2a"
            },
            "tags_all": {
              "Name": "bd-vpc-private-us-east-2a"
            },
            "timeouts": null,
            "vpc_id": "vpc-07afc6bd42ab6291b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:226490334962:route-table/rtb-09c3dd546c9028ff7",
            "id": "rtb-09c3dd546c9028ff7",
            "owner_id": "226490334962",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "bd-vpc-private-us-east-2b"
            },
            "tags_all": {
              "Name": "bd-vpc-private-us-east-2b"
            },
            "timeouts": null,
            "vpc_id": "vpc-07afc6bd42ab6291b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:226490334962:route-table/rtb-090fa44e715bad768",
            "id": "rtb-090fa44e715bad768",
            "owner_id": "226490334962",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-026e1b4091e4e876b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "bd-vpc-public"
            },
            "tags_all": {
              "Name": "bd-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-07afc6bd42ab6291b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-062dcdd8f982451b4",
            "route_table_id": "rtb-088bbc6baace98d66",
            "subnet_id": "subnet-0d1195a10fd63e2a9"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07bf709590be9d346",
            "route_table_id": "rtb-09c3dd546c9028ff7",
            "subnet_id": "subnet-06c7ed0987dd001aa"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c6dcc179fb5d8628",
            "route_table_id": "rtb-090fa44e715bad768",
            "subnet_id": "subnet-07450abcaf3f112c9"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01ce8a8560ae543ab",
            "route_table_id": "rtb-090fa44e715bad768",
            "subnet_id": "subnet-0804fb5ae9b9e27ee"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:226490334962:subnet/subnet-0d1195a10fd63e2a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.128/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d1195a10fd63e2a9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "226490334962",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bd-vpc-private-us-east-2a"
            },
            "tags_all": {
              "Name": "bd-vpc-private-us-east-2a"
            },
            "vpc_id": "vpc-07afc6bd42ab6291b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:226490334962:subnet/subnet-06c7ed0987dd001aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.0.192/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06c7ed0987dd001aa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "226490334962",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bd-vpc-private-us-east-2b"
            },
            "tags_all": {
              "Name": "bd-vpc-private-us-east-2b"
            },
            "vpc_id": "vpc-07afc6bd42ab6291b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:226490334962:subnet/subnet-07450abcaf3f112c9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07450abcaf3f112c9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "226490334962",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bd-vpc-public-us-east-2a"
            },
            "tags_all": {
              "Name": "bd-vpc-public-us-east-2a"
            },
            "vpc_id": "vpc-07afc6bd42ab6291b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:226490334962:subnet/subnet-0804fb5ae9b9e27ee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.0.64/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0804fb5ae9b9e27ee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "226490334962",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bd-vpc-public-us-east-2b"
            },
            "tags_all": {
              "Name": "bd-vpc-public-us-east-2b"
            },
            "vpc_id": "vpc-07afc6bd42ab6291b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:226490334962:vpc/vpc-07afc6bd42ab6291b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cdb1f8247bbe87d9",
            "default_route_table_id": "rtb-073078b07b909269f",
            "default_security_group_id": "sg-089aec8fbb98e1f99",
            "dhcp_options_id": "dopt-49cb1520",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07afc6bd42ab6291b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-073078b07b909269f",
            "owner_id": "226490334962",
            "tags": {
              "Name": "bd-vpc"
            },
            "tags_all": {
              "Name": "bd-vpc"
            }
          }
        }
      ]
    }
  ]
}